part_2/todo-application/manifests/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-application
  template:
    metadata:
      labels:
        app: todo-application
    spec:
      volumes:
        - name: todo-app-image
          persistentVolumeClaim:
            claimName: todo-image-claim
      #initContainers:
      #  - name: wait-for-services
      #    image: busybox
      #    command: ["/bin/sh","-c"]
      #    args: ["until echo 'Waiting for postgres...' && nc -vz -w 2 postgres 5432 do echo 'Looping forever...'; sleep 2; done;"]
      containers:
        - name: todo-application
          image: cdaniel999/todo-app:latest
          imagePullPolicy: "Always"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 5000
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 5000
          volumeMounts:
          - name: todo-app-image
            mountPath: /app/files
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              memory: "250Mi"
              cpu: "250m"
