part_2/todo-application/manifests/todo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
spec:
  rules:
  - http:
      paths:
      - path: /todolist
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 5000
